# fsmrepairbench

./: .coverage  .gitignore  BENCHMARK_SPEC.md  CITATION.cff  CONTRIBUTING.md  DATASET_POLICY.md  Dockerfile  LICENSE  README.md  VERSIONING_POLICY.md  audit.csv  bug.json  coverage.json  faulty.json  pyproject.toml  repair.csv  requirements-lock.txt
.cursor/rules/: run-pytest.mdc
.github/workflows/: ci.yml  docs.yml  golden-exports.yml
docs/: EXTENSION_STUDIES.md  FSMREPAIRBENCH_MANIFESTO.md  README.md  api.md  architecture.md  benchmark_spec.md  c1_baseline_repair.md  c1_extended_baseline_repair.md  cli.md  coupling_campaign.md  coverage.md  dataset_format.md  development.md  fault_localization.md  fsmrepairbench_2025_literature_mapping.md  higher_order_mutation.md  implementation_audit_v0_3.md  localization_campaign.md  metamorphic_testing.md  metrics.md  multifamily_cohorts.md  multifamily_pilot.md  mutation_spec.md  negative_controls.md  oracle_depth_ablation.md  oracle_spec.md  reproducibility.md  roadmap.md  schemas.md  semantics.md  taxonomy.md  taxonomy_coverage.md  tool_runner.md
examples/: README.md  demo_bug.json  demo_faulty.json  demo_fsm.json  demo_oracle.json  synthetic_medium.json  synthetic_small.json
experiment_output/: pipeline_manifest.json
plans/: README.md  fsmrepairbench_multifamily_pilot_plan.yaml  fsmrepairbench_multifamily_v0_3_plan.yaml  fsmrepairbench_multifamily_v0_3_smoke_plan.yaml  fsmrepairbench_v0_10k_plan.yaml  fsmrepairbench_v0_1k_plan.yaml  fsmrepairbench_v0_2_plan.yaml  fsmrepairbench_v0_higher_order_smoke_plan.yaml  fsmrepairbench_v0_smoke_plan.yaml
results/: _smoke_coupling_out.json  _smoke_localize_out.json  coupling_higher_order_report.json  coupling_report.json  coverage.json  demo_score.csv  demo_score.json  localization.json
scripts/: set_github_about.sh  update_docs.py
tests/: __init__.py  helpers.py  test_adversarial_fsm.py  test_ambiguity_injection.py  test_analytics.py  test_artifact.py  test_baseline_repair_campaign.py  test_baselines.py  test_behavioral_anchor_validation.py  test_benchmark_campaign.py  test_benchmark_evolution.py  test_benchmark_health.py  test_benchmark_utility.py  test_benchmark_utility_calibration.py  test_bpr_engine.py  test_c1_baseline_delta.py  test_c1_extended_baselines.py  test_c1_multiseed_variance.py  test_campaign_metrics_by_partition.py  test_campaign_paired_comparison.py  test_campaign_partitions.py  test_cli.py  test_cli_campaign_commands.py  test_coupling_campaign.py  test_coupling_random_secondary.py  test_coupling_rq4_integrated_exports.py  test_coverage.py  test_coverage_optimizer.py  test_coverage_oracle_generator.py  test_coverage_visualizations.py  test_dataset_builder.py  test_dataset_quality.py  test_difficulty.py  test_difficulty_calibration.py  test_error_propagation.py  test_experiment_executor.py  test_experiment_pipeline.py  test_experiment_statistics.py  test_experiments.py  test_external_variability_fl_feasibility.py  (+70 more)
tools/: baseline_wrong_target.yaml  llama_ollama.yaml  qwen_ollama.yaml
(+98151 files in other folders)
