[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fsmrepairbench"
version = "0.1.0"
description = "Benchmark for evaluating LLM-based repair of behavioural finite-state machines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FSMRepairBench Contributors" }]
keywords = [
    "benchmark",
    "finite-state-machines",
    "fsm",
    "mutation-testing",
    "oracle-testing",
    "software-repair",
    "llm",
    "mealy",
    "moore",
    "efsm",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
analytics = [
    "matplotlib>=3.8",
    "kiwisolver>=1.3.1",
    "scipy>=1.11",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/cesar-andress/fsmrepairbench"
Documentation = "https://github.com/cesar-andress/fsmrepairbench/tree/main/docs"
Repository = "https://github.com/cesar-andress/fsmrepairbench"
Issues = "https://github.com/cesar-andress/fsmrepairbench/issues"

[project.scripts]
fsmrepairbench = "fsmrepairbench.cli:app"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"artifacts" = "artifacts"
"data/literature" = "data/literature"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "golden: frozen paper export SHA-256 regression tests (campaign manifests + ARTIFACTS.sha256)",
    "integration: export regeneration and end-to-end paper pipeline smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["fsmrepairbench"]
mypy_path = "src"
